fix spacing issue on bottom of user/main page

--- a/source/scss/_jade-base.scss
+++ b/source/scss/_jade-base.scss
@@ -142,6 +142,7 @@ button {
 	&.btn-search-bar {
 		border-left: none;
 		border-radius: 0px;
+		margin-top: -8px;
 		padding: 17px 0 17px 0;
 	}
 }
